trunk/Archive2/d5/d528c8c75698ce/output
main.cpp:7:43: error: use of undeclared identifier 'T'
    auto store = [&](auto pair) { storage<T>.insert(pair); };
                                          ^
1 error generated.
